<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SQLiteActivity!</string>
    <string name="app_name">SQLite</string>
    <string name="app_add">Add</string>
    <string name="app_update">Update</string>
    <string name="app_delete">Delete</string>
    <string name="app_clear">Clear</string>
    <string name="app_username">User name:</string>
    <string name="app_telephone">Telephone:</string>
    <string name="app_address">Address:</string>
    <string name="app_mail">Mail Address:</string>

</resources>